[gd_scene load_steps=9 format=3 uid="uid://bpkc7rbbp36vu"]

[ext_resource type="Script" path="res://Shop/BowsShop/shop_weapon.gd" id="1_ohfgj"]
[ext_resource type="Script" path="res://Shop/BowsShop/shop_weapon_data.gd" id="2_de5vr"]
[ext_resource type="PackedScene" uid="uid://bjekrlb1r8icx" path="res://MainMenu/ButtonShootClick.tscn" id="2_r1lb1"]
[ext_resource type="Texture2D" uid="uid://wepteipa4kag" path="res://Shop/BowsShop/Sprites/Bow_1.png" id="2_txt7c"]

[sub_resource type="Resource" id="Resource_6ah8a"]
script = ExtResource("2_de5vr")
name = ""
name_color = Color(0, 0, 0, 1)
name_shadow_color = Color(0, 0, 0, 1)
price = 0
special_ability = ""
block_coordinate = Vector2(0, 0)
bought = false

[sub_resource type="Curve" id="Curve_lhkgh"]
max_value = 2.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_w5cbj"]
offsets = PackedFloat32Array(0, 0.147651, 0.248322, 0.42953, 0.583893, 0.744966, 0.90604)
colors = PackedColorArray(1, 0.839216, 0, 1, 0, 1, 0.166667, 1, 0.9, 1, 0, 1, 0.85, 0, 1, 1, 0, 0.0166669, 1, 1, 0.866667, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="Curve" id="Curve_5tewp"]
min_value = -1.0
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="ShopWeapon" type="Node2D"]
script = ExtResource("1_ohfgj")
data = SubResource("Resource_6ah8a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_txt7c")

[node name="Label" type="Label" parent="."]
offset_left = 30.0
offset_top = 13.0
offset_right = 347.0
offset_bottom = 150.0
scale = Vector2(0.025, 0.025)
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_shadow_color = Color(0.42, 0.336, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 25
theme_override_font_sizes/font_size = 100
text = "Price:"

[node name="BowName" type="Label" parent="."]
offset_left = 12.0
offset_top = -5.0
offset_right = 329.0
offset_bottom = 132.0
scale = Vector2(0.04, 0.04)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 100
text = "Name:"

[node name="ButtonShootClick" parent="." instance=ExtResource("2_r1lb1")]
offset_left = 30.0
offset_top = 3.0
offset_right = 496.0
offset_bottom = 353.0
scale = Vector2(0.025, 0.025)
text = "Buy"

[node name="NewBowBuyEffect" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 500
lifetime = 2.0
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2(0, -1)
angular_velocity_min = 25.0
angular_velocity_max = 25.0
orbit_velocity_min = 0.2
orbit_velocity_max = 0.5
linear_accel_min = 30.0
linear_accel_max = 200.0
radial_accel_min = 5.0
radial_accel_max = 5.0
tangential_accel_min = 20.0
tangential_accel_max = 20.0
scale_amount_curve = SubResource("Curve_lhkgh")
color_ramp = SubResource("Gradient_w5cbj")
hue_variation_curve = SubResource("Curve_5tewp")
